# small-model-hackathon

./: .gitignore  AGENTS.md  README.md  app.py  export_space_requirements.sh  filler_words.py  pyproject.toml  rehearsal_limits.py  requirements.txt  review.py  speech_stats.py  timing.py  transcribe.py
.github/workflows/: deploy-space.yml
assets/: scorecard.css
evals/: README.md  check_review_expectations.py  check_stats_schema_consistency.py  eval_data.py  extract_transcript_stats.py  generate_app_reviews_local.py  modal_adapter_reviews.py  modal_app_reviews.py  modal_train_minicpm5_lora.py  prepare_sft_dataset.py  rank_transcripts_local.py  requirements-minicpm.txt  requirements-modal.txt  speech-feedback-coaching-rubric.md  validate_sft_dataset.py
prompts/: review_system_prompt.jinja2  review_user_prompt.jinja2
scripts/: prove_phase4_models.py  sanitize_codex_trace.py
spec/: manifesto.md  phase-1-core-loop.md  phase-10-minicpm5-finetuning.md  phase-11-hf-adapter-integration.md  phase-12-submission-readiness.md  phase-2-foundation.md  phase-3-transcription.md  phase-4-small-model-review.md  phase-5-timing-and-filler.md  phase-6-wedding-scorecard-polish.md  phase-7-runtime-observability.md  phase-8-two-minute-rehearsal-pilot.md  phase-9-trace-sharing.md
tests/: test_check_review_expectations.py  test_check_stats_schema_consistency.py  test_extract_transcript_stats.py  test_filler_words.py  test_prepare_sft_dataset.py  test_rehearsal_limits.py  test_review_prompt.py  test_speech_stats.py  test_timing.py  test_validate_sft_dataset.py
